2010-08-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Fixed a bug to generate the image
	in string2image whenn the string contains a sharp (#)

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php: Change the status of the agents (the first
	column colors) to the status of the agent, not the worst module

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php: Improved the agents/modules matrix in 
	visual way and converting the horizontal module names in vertical images

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php: Added the function string2image to obtain an image
	from a string with parameters like text color, background color, rotation degrees...

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Improved the function print_status_image
	to allow an additional parameter for send it image options like
	style, width...

2010-08-12  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_alerts.php,
	  godmode/alerts/configure_alert_template.php: Added support for
	  unknown status alerts.

	* pandoradb.sql, godmode/menu.php,
	  extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added support for SNMP
	  filters.

	* godmode/snmpconsole/snmp_filters.php: Added to repository. SNMP
	  filter editor.

	* operation/snmpconsole/snmp_view.php: Fixed header placement.

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php: Added the function html2rgb for
	convert a color string from format #FFFFFF to RGB values

2010-08-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/massive_operations.php: Added the massive operation
	to add snmp modules to an agent

2010-08-11  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor.php: Changed the old way of
	get a snmpwalk to use the new function get_snmpwalk

2010-08-11  Sergio Martin <sergio.martin@artica.es>
